improve menu site

--- a/FTCollectorApp/App.xaml
+++ b/FTCollectorApp/App.xaml
@@ -5,11 +5,19 @@
     <Application.Resources>
         
         <ResourceDictionary>
-            <Style TargetType="Button">
+            <Style TargetType="Button" >
                 <Setter Property="FontSize" Value="Small" />
-                <Setter Property="BackgroundColor" Value="#1976D2" />
+                <!--<Setter Property="BackgroundColor" Value="#1976D2" />-->
                 <Setter Property="TextColor" Value="White" />
                 <Setter Property="CornerRadius" Value="5" />
+                <Style.Triggers>
+                    <Trigger TargetType="Button" Property="IsEnabled" Value="True">
+                        <Setter Property="BackgroundColor" Value="#1976D2" />
+                    </Trigger>
+                    <Trigger TargetType="Button" Property="IsEnabled" Value="False">
+                        <Setter Property="BackgroundColor" Value="Gray" />
+                    </Trigger>
+                </Style.Triggers>
             </Style>
 
             <Style TargetType="Entry">
