--- a/FTCollectorApp/View/FiberPages/SpliceFiberPage.xaml
+++ b/FTCollectorApp/View/FiberPages/SpliceFiberPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FTCollectorApp.Utils"
              x:Class="FTCollectorApp.View.FiberPages.SpliceFiberPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Label Text="Splice Fiber" Padding="30" HorizontalOptions="Center" FontSize="Large"/>
+            <Label Text="Site" Padding="5" />
+            <local:Dropdown x:Name="pTagNumber" SelectedIndexChanged="OnIndexChanged" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
