--- a/FTCollectorApp/View/SitesPage/DuctPage.xaml
+++ b/FTCollectorApp/View/SitesPage/DuctPage.xaml
@@ -30,8 +30,8 @@
                              x:Name="pDuctSize" HorizontalOptions="FillAndExpand"/>
 
                     <Label Text="Color :" />
-                    <local:Dropdown ItemsSource="{Binding DuctColorCode}" BackgroundColor="{Binding ColorHex}" 
-                           ItemDisplayBinding ="{Binding ColorName}" x:Name="pDuctColor" HorizontalOptions="FillAndExpand"/>
+                    <Picker ItemsSource="{Binding DuctColorCode}" 
+                           ItemDisplayBinding ="{Binding ColorName}" x:Name="pDuctColor" />
 
                     <Label Text="Duct Material :" />
                     <local:Dropdown  ItemsSource="{Binding DuctMaterialList}" ItemDisplayBinding="{Binding DucTypeDesc}" 
@@ -50,10 +50,10 @@
                         <Label Text="Duct Plug" />
                         <local:Dropdown x:Name="isPlugged" Grid.Row="1" />
 
-                        <Label Text="Is this duct open or filled" />
+                        <Label Text="IsOpen or filled" Grid.Column="1"/>
                         <local:Dropdown x:Name="isOpen" Grid.Row="1" Grid.Column="1"/>
 
-                        <Label Text="HasPullTape" />
+                        <Label Text="HasPullTape" Grid.Column="2"/>
                         <local:Dropdown x:Name="hasPullTape" Grid.Row="1" Grid.Column="2"/>
 
                         <Label Text="Has Inner Duct" Grid.Row="2"  />
