--- a/FTCollectorApp/View/SitesPage/DuctPage.xaml
+++ b/FTCollectorApp/View/SitesPage/DuctPage.xaml
@@ -67,7 +67,11 @@
 
                     </Grid>
 
+                    <Button Text="Record Inner Duct" x:Name="btnRecInner" Clicked="btnRecInner_Clicked"/>
+
                     <Button Text="Save and Start Tracing" x:Name="btnSaveStart" Clicked="btnSaveStart_Clicked"/>
+
+                    <Button Text="Finishe Duct Recording" x:Name="btnFinishDRect" Clicked="btnFinishDRect_Clicked"/>                        
                     </StackLayout>
 
                 </ScrollView>
