--- a/FTCollectorApp/View/SitesPage/PullBoxSitePage.xaml
+++ b/FTCollectorApp/View/SitesPage/PullBoxSitePage.xaml
@@ -33,9 +33,9 @@
                         <Label Text="Manufacturer"/>
                         <Picker  ItemsSource="{Binding ManufacturerList}" ItemDisplayBinding="{Binding ManufName}" x:Name="pManufacturer" HorizontalOptions="FillAndExpand"/>
                         <Label Text="Model"/>
-                        <local:Dropdown  ItemsSource="{Binding ModelList}" ItemDisplayBinding="{Binding DevTypeDesc}"
-                            x:Name="pModel" HorizontalOptions="FillAndExpand"/>
-
+                        <local:Dropdown  ItemDisplayBinding="{Binding ModelNumber}"
+                            x:Name="pModel" HorizontalOptions="FillAndExpand" SelectedIndexChanged="OnMdelChanged"/>
+                        <local:BorderColorEntry x:Name="modelDescription" />
                         <Grid Padding="0,5,10,5" RowDefinitions="*,*" ColumnDefinitions="*,*,*">
                             <Label Grid.Row="0" Grid.Column="0"  Text="Enter Height"/>
                             <Label Grid.Row="0" Grid.Column="1" Text="Enter Depth"/>
@@ -45,7 +45,7 @@
                             <local:BorderEntry Grid.Row="1" Grid.Column="2" x:Name="entryWidth"/>
                         </Grid>
 
-                        <Grid Padding="0,5,10,5" RowDefinitions="*,*,*,*" ColumnDefinitions="*,*,*">
+                        <Grid Padding="0,5,10,5" RowDefinitions="0.5*,0.5*,0.5*,0.5*" ColumnDefinitions="*,*,*">
                             <Label Grid.Row="0" Grid.Column="0"  Text="Lane closure required"/>
 
                             <Label Grid.Row="0" Grid.Column="2" Text="Has Power disconnect"/>
