--- a/FTCollectorApp/View/SitesPage/SiteInputPage.xaml
+++ b/FTCollectorApp/View/SitesPage/SiteInputPage.xaml
@@ -14,7 +14,9 @@
     </ContentPage.ToolbarItems>    
     <ContentPage.Content>
         <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-            <StackLayout Padding="20" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
+            <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
+                <ScrollView>
+                    <StackLayout Padding="20" VerticalOptions="CenterAndExpand">
                 <!--<StackLayout Padding="20" VerticalOptions="CenterAndExpand">-->
                 <Label Text="Site" FontSize="Large" HorizontalOptions="Center"/>
                 <Label Text="Major Site Type*" HorizontalOptions="Start"/>
@@ -32,6 +34,12 @@
                 <local:BorderColorEntry x:Name="stagePicker" IsReadOnly="True"/>
                 <Label Text="Accuracy" HorizontalOptions="Start"/>
                 <local:BorderColorEntry x:Name="entryAccuracy" IsReadOnly="True"/>
+                <Label Text="Station Number" />
+                <local:BorderColorEntry x:Name="staNumber" IsReadOnly="True"/>
+                <Label Text="Plan Sheet" />
+                <local:BorderColorEntry x:Name="planSheet" IsReadOnly="True"/>
+                <Label Text="Stage" />
+                <local:BorderColorEntry x:Name="planSheetItem" IsReadOnly="True"/>                
                 <Button x:Name="btnRecordGPS" Text="Record GPS"  BackgroundColor="{StaticResource blueColor}"
                     Clicked="btnRecordGPS_Clicked">
                     <Button.Triggers>
@@ -61,14 +69,9 @@
                     </Button.Triggers>
 
                 </Button>
-            </StackLayout>
-            <StackLayout IsVisible="{Binding IsBusy}" Padding="12"
-                 AbsoluteLayout.LayoutFlags="PositionProportional"
-                 AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
+                    </StackLayout>
 
-                <ActivityIndicator IsRunning="{Binding IsBusy}" Color ="{StaticResource blueColor}"/>
-
-                <Label Text="Loading..." HorizontalOptions="Center" TextColor="White"/>
+                </ScrollView>
 
             </StackLayout>
         </AbsoluteLayout>
